making the readme actualy readable and understandable

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-# DEEP-WORLD
+# What is this project and who is it for?
 this project starts from a simple programm like hello-world and goes on to the deep parts and discuses how hello-world is working and what made it
 works for example what standards are aggreed on to get to writting hello-world portably and with a lot of programming languages
-and so on to the very deep parts of what are the laws of physics that you need to know to make it from scratch with refrences a lot of refrences
+and so on to the very deep parts of what are the laws of physics that you need to know to make it.
+this project attempt to be sort of tutorial about the deep parts that if you want to understand you have to look a lot and take a lot of time so I made a tutorials and refrences to a lot of useful links.
